# XBLScrapper

./: README.md  pyproject.toml
src/: .env.example  config.py  logger.py  main.py
