[tool.poetry]
name = "xblscrapper"
version = "2.0.0"
description = "XBLScrapper is a Python tool for collecting a list of friends from an initial gamertag on Xbox Live (Xbox Network)."
authors = ["Codaxy <codaxy@duck.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
keyboard = "^0.13.5"
colorama = "^0.4.6"
requests = "^2.32.3"
datetime = "^5.5"
pydantic-settings = "^2.3.1"
